<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_movie"
        android:title="@string/movies"/>
    <item
        android:id="@+id/topSeriesFragment"
        android:icon="@drawable/ic_baseline_tv"
        android:title="@string/tv_series"/>
    <item
        android:id="@+id/discoverFragment"
        android:icon="@drawable/ic_explore"
        android:title="@string/discover"/>
    <item
        android:id="@+id/artistFragment"
        android:icon="@drawable/ic_artists"
        android:title="@string/artist"/>
    <item
        android:id="@+id/comingSoonFragment"
        android:icon="@drawable/ic_video"
        android:title="@string/coming_soon"/>

</menu>