<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/ic_arrow_back" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profileImage"
                android:layout_width="130sp"
                android:layout_height="160sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16sp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.6Percent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/artist_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/profileImage"
                app:layout_constraintTop_toBottomOf="@+id/profileImage"
                tools:text="Name" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/born"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/artist_name"
                app:layout_constraintTop_toBottomOf="@+id/artist_name" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/montserrat"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView14"
                app:layout_constraintStart_toEndOf="@+id/textView14"
                app:layout_constraintTop_toTopOf="@+id/textView14"
                tools:text="Nov 30, 2013" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/died"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/textView14"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/deathDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView16"
                app:layout_constraintStart_toEndOf="@+id/textView16"
                app:layout_constraintTop_toTopOf="@+id/textView16"
                tools:text="Nov 30, 2013" />

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/colorDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView16" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/biography"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                tools:text="@tools:sample/lorem" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/homePage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40sp"
                android:layout_marginBottom="16dp"
                android:autoLink="web"
                android:gravity="center_horizontal"
                android:padding="12sp"
                android:textColor="?colorPrimary"
                android:textColorLink="?colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imdb"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/biography"
                tools:text="https://github.com/smilingprogrammer" />

            <ImageView
                android:id="@+id/imdb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45sp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/imdb"
                android:padding="12sp"
                android:src="@drawable/ic_imdb"
                app:layout_constraintBottom_toBottomOf="@+id/homePage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/homePage"
                app:layout_constraintTop_toBottomOf="@+id/homePage" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/deathGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="textView16, deathDay"
                tools:visibility="visible" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/ic_movie"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/textView23"
                app:layout_constraintEnd_toEndOf="@+id/textView23"
                app:layout_constraintStart_toStartOf="@+id/textView23"
                tools:text="32" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/ic_baseline_tv"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/textView22"
                app:layout_constraintEnd_toEndOf="@+id/textView22"
                app:layout_constraintStart_toStartOf="@+id/textView22"
                tools:text="95" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/series_casts"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView23"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView23"
                app:layout_constraintTop_toTopOf="@+id/textView23" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="32dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/movie_casts"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/profileImage"
                app:layout_constraintEnd_toStartOf="@+id/textView22"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/profileImage" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>