<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="seriesDetail"
            type="com.example.movielite.response.shows.SeriesDetails" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="195sp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/series_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    app:layout_collapseMode="parallax"/>

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:navigationIcon="@drawable/ic_arrow_back"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:layout_collapseMode="pin"/>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/series_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="?colorOnBackground"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toStartOf="@+id/voting"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Title" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/releaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/montserrat"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/series_name"
                    app:layout_constraintTop_toBottomOf="@+id/series_name"
                    tools:text="Oct 15, 2020" />

                <View
                    android:id="@+id/view"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:background="@color/colorDivider"
                    app:layout_constraintBottom_toBottomOf="@+id/releaseDate"
                    app:layout_constraintStart_toEndOf="@+id/releaseDate"
                    app:layout_constraintTop_toTopOf="@+id/releaseDate" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/runtime"
                    app:layout_constraintStart_toStartOf="@+id/releaseDate"
                    app:layout_constraintTop_toBottomOf="@+id/genre"
                    app:srcCompat="@drawable/ic_access_time" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/runTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="@+id/imageView3"
                    tools:text="2h 58 mins" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/voting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:drawableStart="@drawable/ic_favorite"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="?colorOnBackground"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/series_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/series_name"
                    tools:text="9.8" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/voteCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="@+id/voting"
                    app:layout_constraintTop_toBottomOf="@+id/voting"
                    tools:text="1.2k Votes" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/overView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/montserrat"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/voting"
                    app:layout_constraintStart_toStartOf="@+id/imageView3"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3"
                    tools:text="While searching for their estranged mother, two beautiful sisters, Dagmar and Ursula, arrive at a luxurious seaside hotel. At the same time, a mysterious killer starts murdering promiscuous women in the area." />


                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/seasons"
                    android:textSize="13sp"
                    app:layout_constraintStart_toStartOf="@+id/overView"
                    app:layout_constraintTop_toBottomOf="@+id/overView" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/seasonNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/montserrat"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView8"
                    app:layout_constraintStart_toEndOf="@+id/textView8"
                    app:layout_constraintTop_toTopOf="@+id/textView8"
                    tools:text="2" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/episodes"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toBottomOf="@+id/episodesNo"
                    app:layout_constraintEnd_toEndOf="@+id/overView"
                    app:layout_constraintTop_toTopOf="@+id/episodesNo" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/episodesNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/montserrat"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toBottomOf="@+id/seasonNo"
                    app:layout_constraintEnd_toStartOf="@+id/textView10"
                    app:layout_constraintTop_toTopOf="@+id/seasonNo"
                    tools:text="16" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/seriesCast"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8"
                    app:spanCount="3"
                    tools:itemCount="7"
                    tools:listitem="@layout/cast_item" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/releaseDate"
                    app:layout_constraintTop_toBottomOf="@+id/releaseDate"
                    tools:text="TextView" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/montserrat"
                    android:textSize="14sp"
                    tools:text="TextView"
                    app:layout_constraintBottom_toBottomOf="@+id/releaseDate"
                    app:layout_constraintStart_toEndOf="@+id/view"
                    app:layout_constraintTop_toTopOf="@+id/releaseDate"
                    app:layout_constraintVertical_bias="1.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>